# TB_VIZ

./: readme.md
Frontend/: main.ts
TB_Backend/: main.py  pyproject.toml
TB_Backend/uploads/: extern_Synlab_2156_17_3_MTB.json
TB_Backend/utils/: cropping.py  generic_utils.py  get_map.py  inference_visualization.py  loader.py  postprocessing.py  run_pipeline.py  smear_pipeline.py  thresholding.py  zarr_helper.py
TB_Backend/utils/n_networks/: neural_net.py
